crates/psqs/src/queue/snapshots/psqs__queue__slurm__tests__cfour_slurm.snap
---
source: crates/psqs/src/queue/slurm.rs
expression: got
---
#!/bin/bash
#SBATCH --ntasks=1
#SBATCH --cpus-per-task=1
#SBATCH --no-requeue
#SBATCH --mem=8gb
 
export CFOUR_CMD=${CFOUR_CMD:-xcfour}
(cd opt0 && $CFOUR_CMD)
(cd opt1 && $CFOUR_CMD)
(cd opt2 && $CFOUR_CMD)
(cd opt3 && $CFOUR_CMD)
