crates/psqs/src/queue/snapshots/psqs__queue__slurm__tests__molpro_slurm.snap
---
source: crates/psqs/src/queue/slurm.rs
expression: got
---
#!/bin/bash
#SBATCH --ntasks=1
#SBATCH --cpus-per-task=1
#SBATCH --no-requeue
#SBATCH --mem=8gb
 
export MOLPRO_CMD=${MOLPRO_CMD:-"molpro -t 1 --no-xml-output"}
$MOLPRO_CMD opt0.inp
$MOLPRO_CMD opt1.inp
$MOLPRO_CMD opt2.inp
$MOLPRO_CMD opt3.inp
