crates/psqs/src/queue/snapshots/psqs__queue__slurm__tests__mopac_slurm.snap
---
source: crates/psqs/src/queue/slurm.rs
expression: got
---
#!/bin/bash
#SBATCH --ntasks=1
#SBATCH --cpus-per-task=1
#SBATCH --no-requeue
#SBATCH --mem=1gb
 
export MOPAC_CMD=${MOPAC_CMD:-mopac}
echo $SLURM_JOB_ID
date
hostname
$MOPAC_CMD opt0.mop
$MOPAC_CMD opt1.mop
$MOPAC_CMD opt2.mop
$MOPAC_CMD opt3.mop
