crates/psqs/src/queue/snapshots/psqs__queue__slurm__tests__orca_slurm.snap
---
source: crates/psqs/src/queue/slurm.rs
expression: got
---
#!/bin/bash
#SBATCH --ntasks=1
#SBATCH --cpus-per-task=1
#SBATCH --no-requeue
#SBATCH --mem=8gb
 
export ORCA_CMD=${ORCA_CMD:-orca}
$ORCA_CMD opt0.inp > opt0.out 2>&1
$ORCA_CMD opt1.inp > opt1.out 2>&1
$ORCA_CMD opt2.inp > opt2.out 2>&1
$ORCA_CMD opt3.inp > opt3.out 2>&1
